fixed alignment of spot create

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -33,3 +33,9 @@
   opacity: 0.7;
   border-radius: 0px;
 }
+
+.fa-envelope {
+  color: white;
+  position: relative;
+  font-size: 20px;
+}
